--- a/css/styles.css
+++ b/css/styles.css
@@ -9,24 +9,38 @@
 }
 
 :root {
-  --cor-1: #ffa600;
-  --cor-2: #ffd27d;
-  --cor-3: #ffe5b6;
+  --cor1: #7700ff;
+  --cor2: #0052bd;
+  --cor3: rgb(255, 0, 242);
+  --cor4: #ffff;
 }
 
 html,
 body {
+  height: 100vh;
+  padding: 0;
+  display: flex;
+  margin: 0;
   width: 100%;
   overflow-x: hidden;
+  background-image: url(/images/background.jpg) ;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  
+  
 }
 
 header {
   width: 100%;
-  height: 250px;
-  background: var(--cor-1);
-}
+  height: 100px;
+  background: transparent;
+  backdrop-filter: blur(15px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 
-.content {
+  }
+
+.header-content {
   max-width: 1000px;
   min-width: 300px;
   margin: 0 auto;
@@ -37,8 +51,8 @@ header {
 
 nav {
   width: 100%;
-  height: 125px;
-  display: flex;
+  height: 75px;
+  display: flex;  
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -46,12 +60,13 @@ nav {
 
 .brand {
   font-size: 24px;
-  color: var(--cor-2);
+  color: var(--cor2);
   cursor: pointer;
 }
 nav p {
-  color: white;
+  color: var(--cor1);
   font-weight: bold;
+  font-size: 25px;
 }
 
 nav ul {
@@ -66,31 +81,25 @@ nav ul li {
 }
 
 nav ul li a {
-  color: var(--cor-2);
+  color: var(--cor3);
   text-decoration: none;
 }
 
 nav ul li a:hover {
-  color: var(--cor-3);
+  color: var(--cor4);
 
 }
-nav ul button{
-  border: 1px solid var(--cor-2);
-  background: var(--cor-1);
-  padding: 8px 40px;
+
+nav ul i{
+
+  color: var(--cor3);
+  font-size: 40px;
   cursor: pointer;
-  margin-left: 30px;  
-  color: var(--cor-2);
-  font-weight: bold;
-  border-radius: 4px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-nav ul button:hover {
-  background-color: var(--cor-2);
-  color: var(--cor-1);
-  border: 1px solid var(--cor-3);
-  border-radius: 4px;
-  transition: background-color 0.3s, color 0.3s;
 
 }
+
+nav ul i:hover{
+  color: var(--cor4);
+
+}
+
